调通接收机和电调

--- a/Mfly.ioc
+++ b/Mfly.ioc
@@ -18,15 +18,16 @@ Mcu.CPN=STM32G431RBT6
 Mcu.Family=STM32G4
 Mcu.IP0=FREERTOS
 Mcu.IP1=I2C1
+Mcu.IP10=USART2
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI3
 Mcu.IP5=SYS
 Mcu.IP6=TIM1
-Mcu.IP7=USART1
-Mcu.IP8=USART2
-Mcu.IP9=USART3
-Mcu.IPNb=10
+Mcu.IP7=TIM2
+Mcu.IP8=TIM6
+Mcu.IP9=USART1
+Mcu.IPNb=11
 Mcu.Name=STM32G431R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -37,31 +38,32 @@ Mcu.Pin12=PC5
 Mcu.Pin13=PB0
 Mcu.Pin14=PB2
 Mcu.Pin15=PB10
-Mcu.Pin16=PB11
-Mcu.Pin17=PA10
-Mcu.Pin18=PA11
-Mcu.Pin19=PA12
+Mcu.Pin16=PA10
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
 Mcu.Pin2=PF1-OSC_OUT
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PA15
-Mcu.Pin23=PC10
-Mcu.Pin24=PC11
-Mcu.Pin25=PC12
-Mcu.Pin26=PD2
-Mcu.Pin27=PB7
-Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin29=VP_SYS_VS_tim2
+Mcu.Pin20=PA14
+Mcu.Pin21=PA15
+Mcu.Pin22=PC10
+Mcu.Pin23=PC11
+Mcu.Pin24=PC12
+Mcu.Pin25=PD2
+Mcu.Pin26=PB7
+Mcu.Pin27=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin28=VP_SYS_VS_tim3
+Mcu.Pin29=VP_SYS_VS_DBSignals
 Mcu.Pin3=PC0
-Mcu.Pin30=VP_SYS_VS_DBSignals
-Mcu.Pin31=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin30=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PC1
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA6
-Mcu.PinsNb=32
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431RBTx
@@ -80,9 +82,11 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TimeBase=TIM2_IRQn
-NVIC.TimeBaseIP=TIM2
+NVIC.TIM2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TimeBase=TIM3_IRQn
+NVIC.TimeBaseIP=TIM3
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA10.Locked=true
 PA10.Signal=GPIO_Output
@@ -106,10 +110,11 @@ PA7.Locked=true
 PA7.Signal=GPIO_Input
 PB0.Locked=true
 PB0.Signal=GPIO_Output
-PB10.Mode=Asynchronous
-PB10.Signal=USART3_TX
-PB11.Mode=Asynchronous
-PB11.Signal=USART3_RX
+PB10.GPIOParameters=GPIO_ModeDefaultPP,GPIO_PuPd
+PB10.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PB10.GPIO_PuPd=GPIO_NOPULL
+PB10.Locked=true
+PB10.Signal=S_TIM2_CH3
 PB2.Locked=true
 PB2.Signal=GPIO_Output
 PB7.Mode=I2C
@@ -169,7 +174,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12Freq_Value=128000000
 RCC.AHBFreq_Value=128000000
 RCC.APB1Freq_Value=128000000
@@ -222,6 +227,8 @@ SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
 SH.S_TIM1_CH3.ConfNb=1
 SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
 SH.S_TIM1_CH4.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,Input_Capture3_from_TI3
+SH.S_TIM2_CH3.ConfNb=1
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI3.CalculateBaudRate=8.0 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
@@ -235,21 +242,30 @@ TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,Channel-PWM Generation4 CH4,Prescaler,PeriodNoDither
 TIM1.PeriodNoDither=19999
 TIM1.Prescaler=127
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM2.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM2.ICPolarity_CH3=TIM_INPUTCHANNELPOLARITY_BOTHEDGE
+TIM2.IPParameters=Prescaler,ICPolarity_CH3,AutoReloadPreload,PeriodNoDither,Channel-Input_Capture3_from_TI3
+TIM2.PeriodNoDither=0xffffffff
+TIM2.Prescaler=127
+TIM6.IPParameters=Prescaler
+TIM6.Prescaler=127
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.BaudRate=1500000
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
-USART3.BaudRate=38400
-USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
-USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
-VP_SYS_VS_tim2.Mode=TIM2
-VP_SYS_VS_tim2.Signal=SYS_VS_tim2
+VP_SYS_VS_tim3.Mode=TIM3
+VP_SYS_VS_tim3.Signal=SYS_VS_tim3
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
