--- a/Mfly.ioc
+++ b/Mfly.ioc
@@ -10,9 +10,9 @@ FREERTOS.configTOTAL_HEAP_SIZE=10240
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.I2C_Speed_Mode=I2C_Standard
+I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,I2C_Speed_Mode
-I2C1.Timing=0x20A0C4DF
+I2C1.Timing=0x2040184B
 KeepUserPlacement=false
 Mcu.CPN=STM32G431RBT6
 Mcu.Family=STM32G4
@@ -174,7 +174,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.ADC12Freq_Value=128000000
 RCC.AHBFreq_Value=128000000
 RCC.APB1Freq_Value=128000000
